# bad-tetris

./: .gitignore  Cargo.toml  docker-compose.yml  index.html  notes.md
src/: board.rs  drawing.rs  lib.rs  tetrominos.rs  webgl.rs
src/board/: block_physics_tests.rs  tetromino_physics_tests.rs
