[package]
name = "bad-tetris"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "Window", "Document", "HtmlCanvasElement", "WebGl2RenderingContext", "WebGlProgram", "WebGlShader", "WebGlBuffer"] }
console_error_panic_hook = { version = "0.1.2" }
debug-cell = "0.1.1"
chrono = { version = "0.4.19", features = ["wasmbind"] }
